* Fix Testimonials job title and alignment.

--- a/src/assets/styles/components/testimonials.sass
+++ b/src/assets/styles/components/testimonials.sass
@@ -1,5 +1,8 @@
 @import '../variables';
 #Testimonials
+  p
+    margin: 0
+    font-size: 0.8rem
   svg
     margin-right: 1rem
 
